--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Team3</string>
     <string name="title_activity_settings">Settings</string>
-
+    <string name="repeat_button">Click to Repeat.</string>
+    <string name="skip_button">Try Another Question.</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
