--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,8 +78,9 @@
     <string name="intro_message">For security reasons, please answer the following question
         before proceeding.</string>
     <string name="instructions">Turn up your volume, then tap the screen to continue.</string>
-    <string name="app_speaking">Speaking now...</string>
+    <string name="app_speaking">Speaking now.</string>
     <string name="alt_text_correct">Check Mark, correct!</string>
     <string name="alt_text_incorrect">Wrong Answer</string>
+    <string name="correct">Correct!</string>
 
 </resources>
