--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">Team3</string>
     <string name="title_activity_settings">Settings</string>
-
+    <string name="correct_text">Correct!</string>
+    <string name="Question_Starting">Question Is Playing</string>
+    <string name="incorrect_text">Incorrect</string>
+    <string name="incorrect_picture">Inccorect</string>
+    <string name="retry_text">Retry</string>
+    <string name="doge_pic">Pic of doge</string>
+    <string name="restart_text">RESTART</string>
+    <string name="welcome_text">Please Ensure Volume Is Turned On And Tap Screen To Continue</string>
+    <string name="re">Retry</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
@@ -31,6 +39,7 @@
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string name="asking_question">Asking Question</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
