--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
         <item>Blue</item>
         <item>Green</item>
         <item>Orange</item>
-        <item>Purple</item>
+        <item>Yellow</item>
     </string-array>
 
 <string-array name="multi_select_list_preference_default_value" />
