--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
         <item>Blue</item>
         <item>Green</item>
         <item>Yellow</item>
+        <item>Dark Gray</item>
     </string-array>
 
 <string-array name="multi_select_list_preference_default_value" />
@@ -73,7 +74,7 @@
 <string name="pref_title_system_sync_settings">System sync settings</string>
 
 <!-- Example settings for Notifications -->
-    <string name="submit_text">Submit</string>
+    <string name="submit_text">Save</string>
     <string name="color_text">Color</string>
     <string name="pref_header_notifications">Notifications</string>
     <string name="pref_title_new_message_notifications">New message notifications</string>
