--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="app_name">Team3</string>
+    <string name="app_name">Voitcha</string>
     <string name="title_activity_settings">Settings</string>
     <string name="repeat_button">Click button to repeat question.</string>
     <string name="skip_button">Tap button to try another question.</string>
